added function to show data on page  is loaded

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <div class="card card-body mt-4 ">
             <table class="table" id="crudTable">
-                <!-- <thead>
+                <thead>
                   <tr>
                     <th>No.</th>
                     <th>Expence</th>
@@ -43,7 +43,7 @@
                 </thead>
                 <tbody>
 
-                </tbody> -->
+                </tbody>
         </div>
 
         
