--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <label for="">Add Description</label>
             <input type="text" id="desc" class="form-control">
             <button id="AddBtn" type="submit" class="mt-4"> Add Expence</button>
-            <button id="UpdateBtn" type="submit" class="mt-4"> Update Expence</button>
+            <button id="UpdateBtn" type="submit" class="mt-4" style="display: none;"> Update Expence</button>
           </div>
         </div>
 
