--- a/signup.html
+++ b/signup.html
@@ -15,21 +15,25 @@
             </div>
           <div id="details" class="details">
             <label for="">Name</label>
-            <input type="text" id="name" class="form-control">
+            <input type="text" id="name" class="form-control" required="required">
             <label for="">Email</label>
-            <input type="email" id="email" class="form-control">
+            <input type="email" id="email" class="form-control"  required="required">
             <label for="">Password</label>
-            <input type="password" id="password" class="form-control">
+            <input type="password" id="password" class="form-control"  required="required">
             <label for="">Re-Enter Password</label>
-            <input type="password" id="password" class="form-control">
-            <button id="AddBtn" type="submit" class="mt-4">SignUp</button>
+            <input type="password" id="password" class="form-control"  required="required">
+            <button id="signupBtn" type="submit" class="mt-4" onclick="addUser()">SignUp</button>
+            <div id="msg" style="color: red;">
+           <!-- for error msg -->
+            </div>
           </div>
         </div>
         <br>
         <div>
             <a href="./login.html" style="color: black;">Existing User Click Here</a>
         </div>
-        
     </div>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.6.0/axios.min.js"></script>
+<script src="main.js"></script>
 </html>
